# pdf-toc-editor

./: LICENSE  README.md  build.bat  build.spec  pyproject.toml  setup.py
app/: __init__.py  editor.py  main.py  utils.py  widgets.py
