[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pdf-toc-editor"
version = "0.1.0"
description = "A simple PDF Table of Contents editor built with PyQt5 and PyMuPDF"
readme = "README.md"
authors = [
  { name="clarkewinshell", email="" }
]
license = { text = "MIT" }
requires-python = ">=3.8"
dependencies = [
  "PyQt5>=5.15",
  "PyMuPDF>=1.23",
]

[project.urls]
Homepage = "https://github.com/clarkewinshell/pdf-toc-editor"
Source = "https://github.com/clarkewinshell/pdf-toc-editor"
Issues = "https://github.com/clarkewinshell/pdf-toc-editor/issues"

[project.scripts]
pdf-toc-editor = "pdf_toc_editor.main:main"
